--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:easyclock"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="簡易時鐘" Height="450" Width="800" Icon="0605.png" ResizeMode="NoResize" WindowStartupLocation="Manual">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="45*"/>
+            <ColumnDefinition Width="749*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="txtTime" HorizontalAlignment="Left" Height="170" Margin="30,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="490" FontSize="100" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtDate" HorizontalAlignment="Left" Height="60" Margin="30,202,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="300" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Grid.ColumnSpan="2" FontSize="42"/>
+        <TextBox x:Name="txtWeekDay" HorizontalAlignment="Left" Height="60" Margin="325,202,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="150" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1" FontSize="42"/>
+        <Button x:Name="btnSetAlert" Content="設定鬧鐘" HorizontalAlignment="Left" Height="35" Margin="30,292,0,0" VerticalAlignment="Top" Width="105" Grid.ColumnSpan="2" Click="btnSetAlert_Click"/>
+        <Button x:Name="btnCancelAlert" Content="取消鬧鐘" HorizontalAlignment="Left" Height="35" Margin="135,292,0,0" VerticalAlignment="Top" Width="105" Grid.Column="1" Click="btnCancelAlert_Click"/>
+        <ComboBox x:Name="cmbHour" HorizontalAlignment="Left" Margin="325,295,0,0" VerticalAlignment="Top" Width="65" Height="20" Grid.Column="1"/>
+        <ComboBox x:Name="cmbMin" HorizontalAlignment="Left" Margin="410,295,0,0" VerticalAlignment="Top" Width="65" Height="20" Grid.Column="1"/>
+        <MediaElement x:Name="meSound" HorizontalAlignment="Left" Height="120" Margin="560,215,0,0" VerticalAlignment="Top" Width="130" Grid.Column="1" Source="alert.wav" Volume="1" MediaEnded="meSound_MediaEnded"/>
+
     </Grid>
 </Window>
